objects/npsp__Data_Import_Object_Mapping__mdt.object
<CustomObject>
    <description>Used for Data Import Advanced Mapping definitions. These represent Object Groups and their relationships which will be used for different NPSP Data Import batches.</description>
    <fields>
        <fullName>npsp__Custom_Mapping_Logic_Class__c</fullName>
        <description>If custom apex logic should be used to map the fields for this object, then this field should be populated with the name of a class (including namespace if needed) that extends the BDI_ObjectMappingLogic class and overrides the populateObject method.</description>
        <inlineHelpText>If custom apex logic should be used to map the fields for this object, then this field should be populated with the name of a class (including namespace if needed) that extends the BDI_ObjectMappingLogic class and overrides the populateObject method.</inlineHelpText>
        <label>Custom Mapping Logic Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Data_Import_Object_Mapping_Set__c</fullName>
        <description>The Data Import Object Group containing this record.</description>
        <inlineHelpText>The Data Import Object Group containing this record.</inlineHelpText>
        <label>Data Import Object Mapping Set</label>
        <referenceTo>npsp__Data_Import_Object_Mapping_Set__mdt</referenceTo>
        <relationshipLabel>Data Import Object Mappings</relationshipLabel>
        <relationshipName>Data_Import_Object_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>npsp__Imported_Record_Field_Name__c</fullName>
        <description>The Field API Name on the NPSP Data Import object where the ID for the imported record will be placed when the import is successful. This is also where the code will verify if this record was imported or matched.</description>
        <inlineHelpText>The Field API Name on the NPSP Data Import object where the ID for the imported record will be placed when the import is successful. This is also where the code will verify if this record was imported or matched.</inlineHelpText>
        <label>Imported Record Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Imported_Record_Status_Field_Name__c</fullName>
        <description>The Field API Name where the success or failure of the import will be recorded for an NPSP Data Import record.</description>
        <inlineHelpText>The Field API Name where the success or failure of the import will be recorded for an NPSP Data Import record.</inlineHelpText>
        <label>Imported Record Status Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Legacy_Data_Import_Object_Name__c</fullName>
        <description>The legacy Data Import object name of the object this Data Import Object Group is based on.</description>
        <inlineHelpText>The legacy Data Import object name of the object this Data Import Object Group is based on.</inlineHelpText>
        <label>Legacy Data Import Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Object_API_Name__c</fullName>
        <description>The API name of the target object for this Object Group.</description>
        <inlineHelpText>The API name of the target object for this Object Group.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Predecessor__c</fullName>
        <description>The Data Import Object Group record that must exist before this record can be created (either Parent or Child).</description>
        <inlineHelpText>The Data Import Object Group record that must exist before this record can be created (either Parent or Child).</inlineHelpText>
        <label>Predecessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Relationship_Field__c</fullName>
        <description>If this Object Group is a child of the predecessor, this field should look up to the parent. If it&apos;s the parent of the predecessor, this should be the lookup field on the child record.</description>
        <inlineHelpText>If this Object Group is a child of the predecessor, this field should look up to the parent. If it&apos;s the parent of the predecessor, this should be the lookup field on the child record.</inlineHelpText>
        <label>Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Relationship_To_Predecessor__c</fullName>
        <description>This indicates if this object is a parent or child of the predecessor.</description>
        <inlineHelpText>This indicates if this object is a parent or child of the predecessor.</inlineHelpText>
        <label>Relationship To Predecessor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                    <default>true</default>
                    <label>Parent</label>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>No Predecessor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Import Object Mapping</label>
    <pluralLabel>Data Import Object Mappings</pluralLabel>
</CustomObject>